Colaboratory를 통해 생성됨

--- a/Image_classification_Practice.ipynb
+++ b/Image_classification_Practice.ipynb
@@ -4,9 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "toc_visible": true,
       "mount_file_id": "1KvRmzRmfINPAZUTHQQ1sc5_rFaRYzOs3",
-      "authorship_tag": "ABX9TyOqSpHLpgw37xRGxxAh5aLL",
+      "authorship_tag": "ABX9TyPrcKo734vFxdSySQgbksqF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1301,12 +1300,13 @@
       "cell_type": "code",
       "source": [
         "def get_optimizer(model, args):\n",
-        "    if args.optimizer == \"adam\":\n",
+        "    if args.optimizer == \"adam\": # optimzer 은 batch 단위로 결과값 parameter 에 따라 lr 만큼 gradient를 업데이트 \n",
         "        optimizer = Adam(model.parameters(), lr=args.lr, weight_decay = 0.0) # from torch.optim import Adam\n",
         "\n",
         "        # 모든 parameter들의 grad 값을 0으로 초기화\n",
         "        optimizer.zero_grad()\n",
-        "        "
+        "        \n",
+        "        return optimizer"
       ],
       "metadata": {
         "id": "S1sJqLu1RFws"
@@ -1315,10 +1315,69 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#get_scheduler"
+      ],
+      "metadata": {
+        "id": "VctKvXeCBus8"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def get_scheduler(optimizer, args):\n",
+        "    if args.scheduler == 'plateau': # Scheduler 는 epoch 단위로 lr 조절, 일종의 하이퍼파라미터 조절기\n",
+        "        scheduler = ReduceLROnPlateau(optimizer, patience=3, factor=0.5, mode='max', verbose = True)\n",
+        "        # ReduceLROnPlateau 는 평가지표에 따라 lr 감소시킬지 말지 결정, mode = max 이므로 평가 지표 증가 멈출 때 lr 감소\n",
+        "    return scheduler\n"
+      ],
+      "metadata": {
+        "id": "6vZA2AuIBuS6"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
       "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "RwrQHEu5REx2"
+        "id": "AbSGXK_O5LSY"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Train"
+      ],
+      "metadata": {
+        "id": "S9NNtxPGZJwX"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def train(args, model, train_loader, optimizer):\n",
+        "    # Train mode\n",
+        "    model.train() \n",
+        "\n",
+        "    corrects = 0\n",
+        "\n",
+        "    for step, (images, labels) in enumerate(train_loader):\n",
+        "        images = images.to(args.device) # 해당 device 로 보내서 연산\n",
+        "        labels = labels.to(args.device)\n",
+        "\n",
+        "        outputs = model(images)\n",
+        "        if args.timm_model == 'vit_deit_base_distilled_patch16_224':\n",
+        "            outputs = outputs[0]\n",
+        "\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        loss.backward()"
+      ],
+      "metadata": {
+        "id": "0h3Qvdo9ZJNo"
       },
       "execution_count": null,
       "outputs": []
