--- a/Image_classification_Practice.ipynb
+++ b/Image_classification_Practice.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "mount_file_id": "1KvRmzRmfINPAZUTHQQ1sc5_rFaRYzOs3",
-      "authorship_tag": "ABX9TyPrcKo734vFxdSySQgbksqF",
+      "authorship_tag": "ABX9TyO+qagJMQQmq5TkUHhIm00X",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1339,15 +1339,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "AbSGXK_O5LSY"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "source": [
         "# Train"
@@ -1374,10 +1365,230 @@
         "            outputs = outputs[0]\n",
         "\n",
         "        loss = criterion(outputs, labels)\n",
-        "        loss.backward()"
+        "        loss.backward() #loss 부터 시작해서 chain rule 에 따라 첫 parameter 까지 gradient 계산\n",
+        "\n",
+        "        optimizer.step() # argument 로 받은 model 의 parameter 를 gradient 와 lr 기반하여 업데이트 해준다.\n",
+        "        optimizer.zero_grad() # 다음 batch 넘어가기 전 gradient 초기화\n",
+        "\n",
+        "        if step % args.log_steps == 0:\n",
+        "            print(f\"Training steps: {step} Loss: {str(loss.item())}\") \n",
+        "\n",
+        "        _, preds = torch.max(outputs, 1) # max 순 정렬 중 첫번째 원소 (image, label)\n",
+        "\n",
+        "        corrects += torch.sum(preds == labels.data) # 예측값과 결과값 동일한 것 개수 확인\n",
+        "\n",
+        "    acc = corrects / args.train_len # 확률 계산\n",
+        "\n",
+        "    return acc"
       ],
       "metadata": {
         "id": "0h3Qvdo9ZJNo"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# validate"
+      ],
+      "metadata": {
+        "id": "oFhauZwxQ5hF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def validate(args, model, valid_loader):\n",
+        "    model.eval() # 검증 시 불필요한 계산 배제를 위한 eval 모드 설정\n",
+        "\n",
+        "    corrects = 0\n",
+        "\n",
+        "    for images, labels in valid_loader:\n",
+        "        images = images.to(args.device)\n",
+        "        labels = labels.to(args.device)\n",
+        "\n",
+        "        outputs = model(images)\n",
+        "\n",
+        "        _, preds = torch.max(outputs, 1)\n",
+        "        corrects += torch.sum(preds==labels.data)\n",
+        "\n",
+        "    acc = corrects / args.valid_len\n",
+        "\n",
+        "    print(f'VALID ACC : {acc}\\n')\n",
+        "\n",
+        "    return acc, outputs"
+      ],
+      "metadata": {
+        "id": "mcKiTIGUQ7dp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# pseudo_labeling"
+      ],
+      "metadata": {
+        "id": "kL3mGpp9TUGZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def pseudo_labeling(args, model, train_data):\n",
+        "    # train_data에 새로운 df\n",
+        "    new_train_data = copy.deepcopy(test_df) # test 데이터프레임 복제\n",
+        "\n",
+        "    test_dataset = ArtDataset(test_df, transform)\n",
+        "    test_loader = DataLoader(test_dataset,\n",
+        "                             shuffle=False,\n",
+        "                             num_workers=args.num_workers,\n",
+        "                             batch_size=args.batch_size,\n",
+        "                             pin_memory=args.pin_memory)\n",
+        "    model.eval()\n",
+        "    answers = []\n",
+        "    for images, labels in test_loader:\n",
+        "        images = images.to(args.device)\n",
+        "        labels = labels.to(args.device)\n",
+        "    \n",
+        "        outputs = model(images)\n",
+        "\n",
+        "        _, preds = torch.max(outputs,1)\n",
+        "\n",
+        "        answers.extend(list(preds.cpu().numpy())) # CUDA 텐서들을 cpu에 다시 옮긴다\n",
+        "\n",
+        "    new_train_data.label = answers # 현재 학습된 모델을 사용해 테스트 데이터를 예측\n",
+        "                                \n",
+        "    # 예측된 값으로 테스트 데이터를 pseudo labeling 하여 train data 처럼 사용\n",
+        "    new_train_data = pd.concat([train_data, new_train_data]).reset_index(drop=True) \n",
+        "\n",
+        "    return new_train_data"
+      ],
+      "metadata": {
+        "id": "yaXHnExCTTiQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# run"
+      ],
+      "metadata": {
+        "id": "q_S4W0LWQqJO"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def run(args, train_data, valid_data):\n",
+        "\n",
+        "    # 캐시 메모리 비우기 및 가비지 컬렉터 가동\n",
+        "    torch.cuda.empty_cache()\n",
+        "    gc.collect()\n",
+        "\n",
+        "    args.train_len = len(train_data)\n",
+        "    args.valid_len = len(valid_data)\n",
+        "    transform = transforms.Compose([transforms.CenterCrop(224)],\n",
+        "                                    transforms.ToTensor(),\n",
+        "                                    transforms.Normalize([0.485, 0.456, 0.406],\n",
+        "                                                         [0.229, 0.224, 0.225])])\n",
+        "    train_loader, valid_loader = get_loader(train_data, valid_data, transform)\n",
+        "\n",
+        "    if args.load:\n",
+        "        model = torch.load(os.path.join(args.model_path, args.model_name))\n",
+        "    else:\n",
+        "        model = get_model(args)\n",
+        "    optimizer = get_optimizer(model, args)\n",
+        "    scheduler = get_scheduler(optimizer, args)\n",
+        "\n",
+        "    early_stopping_counter = 0\n",
+        "    best_acc = -1\n",
+        "\n",
+        "    if args.pseudo_labeling:\n",
+        "        iter_n = args.pseudo_iter_n\n",
+        "    else:\n",
+        "        iter_n = 1\n",
+        "\n",
+        "    for iter_i in range(iter_n): # pseudo labeling을 위한 iteration\n",
+        "        for epoch in notebook.tqdm(range(args.n_epochs)):\n",
+        "            print(f\"Epoch {epoch +1}/{args.n_epochs}\")\n",
+        "\n",
+        "            # TRAIN\n",
+        "            train_acc = train(args, model, train_loader, optimizer)\n",
+        "\n",
+        "            # VALID\n",
+        "            valid_acc, outputs = validate(args, model, valid_loader)\n",
+        "\n",
+        "            # model save and early stopping\n",
+        "            if valid_acc > best_acc:\n",
+        "                best_acc = valid_acc\n",
+        "                early_stopping_counter = 0\n",
+        "\n",
+        "                if args.model == \"timm\":\n",
+        "                    save_name = f\"{args.timm_model}_fold(args.kfold}_{str(best_acc.item())[:4]}\" # 모델명_kfold사용여부_정확도4자릿수\n",
+        "                else:\n",
+        "                    save_name = f\"{args.model}_fold{args.kfold}_{str(best_acc.item())[:4]}\"\n",
+        "                    \n",
+        "                torch.save(model, os.path.join(args.model_path, save_name))\n",
+        "                print(f'model saved {save_name}')\n",
+        "\n",
+        "            else:\n",
+        "                early_stopping_counter +=1 # args.patience 수치 epoch 만큼 학습 진행 했는데 검증 정확도가 best accuracy 보다 발전 없으면 학습 종료 \n",
+        "                if early_stopping_counter >= args.patience:\n",
+        "                    print(f'EarlyStopping counter: {early_stopping_counter} out of {args.patience}')\n",
+        "                    break\n",
+        "\n",
+        "            # scheduler\n",
+        "            if args.scheduler == 'plateau':\n",
+        "                scheduler.step(best_acc) # learning rate 조절, pateau 는 성능 향상이 없을때 learning rate 조절하므로 평가 지표 input 필요\n",
+        "\n",
+        "        \n",
+        "        # Pseudo Labeling\n",
+        "        if args.pseudo_labeling:\n",
+        "            print('pseudo labeling ongoing')\n",
+        "            train_data = pseudo_labeling(args, model, Train\n",
+        "\n",
+        "            # make new train loader with added train data\n",
+        "            train_loader, _ = get_loader(train_data, valiod_data, transform)\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 134
+        },
+        "id": "ATeHthWiQpzt",
+        "outputId": "a19c2ab6-4516-4aff-e8c9-70137c01a85e"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "SyntaxError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-246f082f8708>\"\u001b[0;36m, line \u001b[0;32m12\u001b[0m\n\u001b[0;31m    [0.229, 0.224, 0.225])])\u001b[0m\n\u001b[0m                          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m closing parenthesis ']' does not match opening parenthesis '(' on line 9\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# 데이터 불러오기"
+      ],
+      "metadata": {
+        "id": "ttedIH_GhJyc"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "ASdKB63lfp_K"
       },
       "execution_count": null,
       "outputs": []
